fixed bug where white bar appeared because of overflow-x

--- a/ui-clone/src/components/Header.css
+++ b/ui-clone/src/components/Header.css
@@ -4,7 +4,7 @@
   padding: 20px;
   align-items: center;
   justify-content: space-between;
-  overflow-x: scroll; /* enables scroll in navbar on small screens */
+  /* overflow-x: scroll; enables scroll in navbar on small screens */
 }
 
 .header > img {
