--- a/ui-clone/src/components/Nav.css
+++ b/ui-clone/src/components/Nav.css
@@ -22,6 +22,6 @@
 }
 
 .nav > h2:hover {
-  opacity: 1;
+  opacity: 1.3;
   transform: scale(1.2);
 }
